--- a/index.html
+++ b/index.html
@@ -134,5 +134,18 @@
       <span class="premium">Instagram:</span>
       <span class="hello">@shecodes.io</span>
     </div>
+    <div class="links">
+      <p>
+        This project was coded by
+        <a href="#" target="_blank">Tshimologo</a> and is
+        <a href="https://github.com/Genesis-ct/my-first-app" target="_blank">
+          on GitHub</a
+        >
+        and
+        <a href="https://graceful-banoffee-dd2d56.netlify.app/" target="_blank"
+          >hosted on Netlify</a
+        >
+      </p>
+    </div>
   </body>
 </html>
